--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,7 +6,10 @@
 			<div class="date">
 				{{ post.publsihed_date }}
 			</div>
-		{% endif %}	
+		{% endif %}
+		{% if user.is_authenticated %}
+		<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+		{% enfif %}
 		<h1>{{ post.title }}</h1>
 		<p>{{ post.text|linebreaksbr }}</p>
 	</div>
